# plush

./: Cargo.toml  LICENSE  README.md
.github/scripts/: update-homebrew-tap.sh
.github/workflows/: prerelease.yml
src/: completion.rs  config.rs  dirs.rs  error.rs  exec.rs  expand.rs  highlight.rs  interactive.rs  lib.rs  main.rs  parser.rs  path_cache.rs  profile.rs  prompt.rs  shell.rs  terminal.rs
tests/: pty_smoke.exp  smoke.rs
