[package]
name = "plush"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
brush-parser = "0.4.0"
crossterm = "0.29.0"
dirs = "6.0.0"
glob = "0.3.3"
libc = "0.2.177"
nix = { version = "0.30.1", features = ["fs", "process", "signal", "term"] }
nu-ansi-term = "0.50.3"
reedline = { version = "0.47.0", default-features = false, features = ["bashisms"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
toml = "0.9.8"
tree-sitter = "0.25.10"
tree-sitter-bash = "0.25.1"
which = "8.0.0"

[dev-dependencies]
assert_cmd = "2.1.1"
tempfile = "3.23.0"
